--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -165,7 +165,7 @@
             <div class="col-12 col-md-4 col-lg-3 mb-4">
                 <div class="gallery">
                     <a href="#" onclick="openModal(1)">
-                        <img src="./college/gallery/jj.jpg" alt="jj" class="img-fluid">
+                        <img src="./gallery/jj.jpg" alt="jj" class="img-fluid">
                         <div class="description">Image 2</div>
                     </a>
                 </div>
@@ -175,7 +175,7 @@
             <div class="col-12 col-md-4 col-lg-3 mb-4">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
-                        <img src="./college/gallery/ii.jpg" alt="ii" class="img-fluid">
+                        <img src="./gallery/ii.jpg" alt="ii" class="img-fluid">
                         <div class="description">Image 3</div>
                     </a>
                 </div>
@@ -183,7 +183,7 @@
 			 <div class="col-12 col-md-4 col-lg-3 mb-4">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
-                        <img src="./college/gallery/hh.jpg" alt="hh" class="img-fluid">
+                        <img src="./gallery/hh.jpg" alt="hh" class="img-fluid">
                         
                     </a>
                 </div>
@@ -256,17 +256,17 @@
     <script>
         // Array of image paths
         const images = [
-            'C:/Users/hp/Desktop/college/gallery/aa.jpg',
-            'C:/Users/hp/Desktop/college/gallery/jj.jpg',
-            'C:/Users/hp/Desktop/college/gallery/ii.jpg',
-            'C:/Users/hp/Desktop/college/gallery/hh.jpg',
-            'C:/Users/hp/Desktop/college/gallery/gg.jpg',
-            'C:/Users/hp/Desktop/college/gallery/ff.jpg',
-            'C:/Users/hp/Desktop/college/gallery/ee.jpg',
-            'C:/Users/hp/Desktop/college/gallery/dd.jpg',
-            'C:/Users/hp/Desktop/college/gallery/cc.jpg',
-            'C:/Users/hp/Desktop/college/gallery/bb.jpg',
-            'C:/Users/hp/Desktop/college/gallery/aa.jpg'
+            'C:./gallery/aa.jpg',
+            'C:./gallery/jj.jpg',
+            'C:./gallery/ii.jpg',
+            'C:./gallery/hh.jpg',
+            'C:./gallery/gg.jpg',
+            'C:./gallery/ff.jpg',
+            'C:./gallery/ee.jpg',
+            'C:./gallery/dd.jpg',
+            'C:./gallery/cc.jpg',
+            'C:./gallery/bb.jpg',
+            'C:./gallery/aa.jpg'
         ];
 
         let currentImageIndex = -1;
