--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div class="container mt-5 d-flex flex-wrap justify-content-between">
         <!-- Left-side image -->
         <div class="col-12 col-md-6">
-            <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" alt="Image related to chemistry learning" class="img-fluid">
+            <img src="./gallery/aa.jpg" alt="Image related to chemistry learning" class="img-fluid">
         </div>
 
         <!-- Right-side text -->
