--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -180,7 +180,69 @@
                     </a>
                 </div>
             </div>
-
+  <!-- Gallery Item 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-4">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(2)">
+                        <img src="./gallery/hh.jpg" alt="hh" class="img-fluid">
+                        <div class="description">Image 3</div>
+                    </a>
+                </div>
+            </div>
+              <!-- Gallery Item 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-4">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(2)">
+                        <img src="./gallery/gg.jpg" alt="gg" class="img-fluid">
+                        <div class="description">Image 3</div>
+                    </a>
+                </div>
+            </div>
+              <!-- Gallery Item 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-4">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(2)">
+                        <img src="./gallery/ff.jpg" alt="ff" class="img-fluid">
+                        <div class="description">Image 3</div>
+                    </a>
+                </div>
+            </div>
+              <!-- Gallery Item 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-4">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(2)">
+                        <img src="./gallery/ee.jpg" alt="ee" class="img-fluid">
+                        <div class="description">Image 3</div>
+                    </a>
+                </div>
+            </div>
+              <!-- Gallery Item 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-4">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(2)">
+                        <img src="./gallery/dd.jpg" alt="dd" class="img-fluid">
+                        <div class="description">Image 3</div>
+                    </a>
+                </div>
+            </div>
+              <!-- Gallery Item 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-4">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(2)">
+                        <img src="./gallery/cc.jpg" alt="cc" class="img-fluid">
+                        <div class="description">Image 3</div>
+                    </a>
+                </div>
+            </div>
+              <!-- Gallery Item 3 -->
+            <div class="col-12 col-md-4 col-lg-3 mb-4">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(2)">
+                        <img src="./gallery/bb.jpg" alt="bb" class="img-fluid">
+                        <div class="description">Image 3</div>
+                    </a>
+                </div>
+            </div>
             <!-- More gallery items... -->
         </div>
     </div>
