--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
 
 
  <div class="hero">
-  
-    <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" alt="Hero Image 1" class="section-img img-fluid rounded" />
-   <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" alt="Hero Image 2" class="section-img img-fluid rounded" />
-   <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" alt="Hero Image 3" class="section-img img-fluid rounded" />
+        <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
+	 <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
+	 <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
+    
            </div>
 	
   
