--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -54,7 +54,13 @@
             </div>
         </div>
     </nav>
-
+<div class="intro-section">
+        <h2 style="text-align: center; color: red; font-size: 2rem">GOVERNMENT GIRLS COLLEGE DAULATPUR</h2><br>
+        <p style="text-align: center; color: black;padding-left: 1em; font-size: 1.3rem; font-family: Arial, sans-serif;">. GOVERNMENT GIRLS COLLEGE DAULATPUR HAVE NO OWN BUILDING. CURRENTLY IT IS RUNNING IN VACANT OLD GIRLS HIGH SCHOOL BUILDING WITH EXCEES SHORTAGE OF PROPER LABS AND OTHER INFRA STRUCTURE..</p>
+        <p style="text-align: center; color: black;padding-left: 1em; font-size: 1.3rem; font-family: Arial, sans-serif;">THIS OLD GIRLS HIGH SCHOOL DULATPUR IS HANDED OVER BY EDO SHAHEED BENAZIR ABAD TO GOVERNMENT BOYS DEGREE COLLEGE DAULATPUR IN YEAR 2004</p>
+     <p style="text-align: center; color: black;padding-left: 1em; font-size: 1.3rem; font-family: Arial, sans-serif;">IN 2006 THE GIRLS COLLEGE ESTABLISHED WITH SNE BUT WITHOUT BUILDING WHICH TILL THEN RUNNING IN THAT BUILDING OF OLD GIRLS HIGH SCHOOL DAULATPUR ALONG WITH BOYS COLLEGE DAULATPUR </p>
+<p style="text-align: center; color: black;padding-left: 1em; font-size: 1.3rem; font-family: Arial, sans-serif;">GOVERNMENT BOYS DEGREE COLLEGE DAULATPUR IS SHIFTED ITS OWN NEW BUILDING IN AUGUST 2023 hence completely in use of Government Girls College Daulatpur.</p>   
+</div>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
