--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -24,7 +24,11 @@
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
-
+ /* Footer */
+        footer {
+            background-color: #1d4ed8;
+        }
+		
     </style>
 </head>
 <body>
@@ -64,5 +68,8 @@
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+     <footer class="bg-blue-600 text-white text-center py-4">
+        <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+    </footer>
 </body>
 </html>
