--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -24,10 +24,11 @@
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
- /* Footer */
-        footer {
-            background-color: #1d4ed8;
-        }
+    footer {
+            background-color: #1D4ED8; /* Blue background */
+            color: white;
+            text-align: center;
+            padding: 20px;
 		
     </style>
 </head>
