--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -43,7 +43,18 @@
             object-fit: cover;
             transition: all 0.3s ease;
         }
+ .row {
+            margin-right: 0;
+            margin-left: 0;
+			
+        }
 
+        .col-12, .col-md-4, .col-lg-3 {
+            padding-right: 0;
+            padding-left: 0;
+             
+            
+        }
         /* Hover effect on gallery item */
         .gallery:hover {
             border: 1px solid #333;
@@ -55,6 +66,7 @@
             position: fixed;
             z-index: 1;
             left: 0;
+             margin-bottom: 0; 
             top: 0;
             width: 100%;
             height: 100%;
