--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -219,6 +219,7 @@
         <button class="btn start-btn" onclick="selectChapter(9)">12:Mathematics</button>
 		 <div class="bottom-heading">
 	 <h2 style="text-align: center; color: red; font-size: 18px">The teachers who provided MCQs for every subject</h2>
+      <h2 style="text-align: center; color: black; font-size: 16px">Prof: Khalid Hussain Buriro &nbsp;&nbsp; (Zoology)</h2>
 		  <p class="prof-list">
 		  Prof: Khalid Hussain Buriro &nbsp;&nbsp;&nbsp; (Zoology)<br>
     Prof: Athar Siyal &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (physics)&nbsp;&nbsp;&nbsp;&nbsp;(The MCQs will be provided to you as soon as possible)<br>
