--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -170,7 +170,8 @@
         }
 		.prof-list {
 		 margin-top: 30px;
-      padding-left: 80px; /* Adjust the space from the left */
+      padding-left: 30px;
+      padding-right: 30px;
     }
 
     </style>
