--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -170,8 +170,8 @@
         }
 		.prof-list {
 		 margin-top: 30px;
-      padding-left: 30px;
-      padding-right: 30px;
+      padding-left: 15px;
+      padding-right: 15px;
     }
 
     </style>
@@ -220,12 +220,12 @@
         <button class="btn start-btn" onclick="selectChapter(9)">12:Mathematics</button>
 		 <div class="bottom-heading">
 	 <h2 style="text-align: center; color: red; font-size: 18px">The teachers who provided MCQs for every subject</h2>
-      <h2 style="text-align: center; color: black; font-size: 16px">Prof: Khalid Hussain Buriro &nbsp;&nbsp; (Zoology)</h2>
+     
 		  <p class="prof-list">
-		  Prof: Khalid Hussain Buriro &nbsp;&nbsp;&nbsp; (Zoology)<br>
-    Prof: Athar Siyal &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (physics)&nbsp;&nbsp;&nbsp;&nbsp;(The MCQs will be provided to you as soon as possible)<br>
-    Prof: Zahid Hussain Siyal &nbsp;&nbsp;&nbsp;&nbsp; (chemistry)<br>
-	Prof: Fida Hussain &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (Mathematics)&nbsp;&nbsp;&nbsp;&nbsp;(The MCQs will be provided to you as soon as possible)<br>
+		  Sir: Khalid Hussain Buriro &nbsp;&nbsp;&nbsp; (Zoology)<br>
+    Sir: Athar Siyal &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (physics)&nbsp;&nbsp;&nbsp;&nbsp;(The MCQs will be provided to you as soon as possible)<br>
+    Sir: Zahid Hussain Siyal &nbsp;&nbsp;&nbsp;&nbsp; (chemistry)<br>
+	PSir: Fida Hussain &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (Mathematics)&nbsp;&nbsp;&nbsp;&nbsp;(The MCQs will be provided to you as soon as possible)<br>
 	
 	</br>
   </p>
