--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -222,10 +222,10 @@
 	 <h2 style="text-align: center; color: red; font-size: 18px">The teachers who provided MCQs for every subject</h2>
      
 		  <p class="prof-list">
-		  Sir: Khalid Hussain Buriro &nbsp;&nbsp;&nbsp; (Zoology)<br>
-    Sir: Athar Siyal &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (physics)&nbsp;&nbsp;&nbsp;&nbsp;(The MCQs will be provided to you as soon as possible)<br>
-    Sir: Zahid Hussain Siyal &nbsp;&nbsp;&nbsp;&nbsp; (chemistry)<br>
-	PSir: Fida Hussain &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (Mathematics)&nbsp;&nbsp;&nbsp;&nbsp;(The MCQs will be provided to you as soon as possible)<br>
+		  Sir: Khalid Hussain Buriro &nbsp;&nbsp; (Zoology)<br>
+    Sir: Athar Siyal &nbsp;&nbsp;(physics :: The MCQs will be provided to you as soon as possible)<br>
+    Sir: Zahid Hussain Siyal &nbsp;&nbsp; (chemistry)<br>
+	Sir: Fida Hussain &nbsp;&nbsp; (Mathematics :: The MCQs will be provided to you as soon as possible)<br>
 	
 	</br>
   </p>
