--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -164,7 +164,7 @@
 
         <div class="row">
             <!-- Gallery Item 1 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(0)">
                         <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
@@ -174,7 +174,7 @@
             </div>
 
             <!-- Gallery Item 2 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(1)">
                         <img src="./gallery/jj.jpg" alt="jj" class="img-fluid">
@@ -184,7 +184,7 @@
             </div>
 
             <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/ii.jpg" alt="ii" class="img-fluid">
@@ -193,7 +193,7 @@
                 </div>
             </div>
   <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/hh.jpg" alt="hh" class="img-fluid">
@@ -202,7 +202,7 @@
                 </div>
             </div>
               <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/gg.jpg" alt="gg" class="img-fluid">
@@ -211,7 +211,7 @@
                 </div>
             </div>
               <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/ff.jpg" alt="ff" class="img-fluid">
@@ -220,7 +220,7 @@
                 </div>
             </div>
               <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/ee.jpg" alt="ee" class="img-fluid">
@@ -229,7 +229,7 @@
                 </div>
             </div>
               <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/dd.jpg" alt="dd" class="img-fluid">
@@ -238,7 +238,7 @@
                 </div>
             </div>
               <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/cc.jpg" alt="cc" class="img-fluid">
@@ -247,7 +247,7 @@
                 </div>
             </div>
               <!-- Gallery Item 3 -->
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
                         <img src="./gallery/bb.jpg" alt="bb" class="img-fluid">
