--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -6,23 +6,20 @@
     <title>Government Girls College</title>
     <!-- Link to Bootstrap CSS (CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome Icons CDN -->
+    <!-- Font Awesome Icons CDN (optional) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* Global Styles */
+	        /* Global Styles */
         body {
-            font-size: 1rem;
+            font-size: 1rem; /* 1rem for scalable font size */
             line-height: 1.5;
             margin: 0;
             padding: 0;
             background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
         }
-
         /* Custom Navbar Color and Padding */
         .navbar-custom {
-            background-color: blue; /* Red background */
-            padding-left: 30px; /* Left padding */
-            padding-right: 30px; /* Right padding */
+            background-color: #007bff; /* Blue background */
         }
 
         /* Main Content */
@@ -80,8 +77,7 @@
         }
     </style>
 </head>
-
-<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
+<body>
 
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-4">
@@ -93,11 +89,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white active" aria-current="page" href="index.html">HOME</a></li>
+                        <a class="nav-link text-white active" aria-current="page" href="index.html">HOME</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
-                   
+                    
                     <li class="nav-item">
                         <a class="nav-link text-white" href="ABOUT-US.html">ABOUT US</a>
                     </li>
