--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -132,6 +132,9 @@
     <footer class="bg-blue-600 text-white text-center py-4">
         <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
+<!-- Bootstrap JS and Popper.js (CDN) -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
 
 </body>
