--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -110,8 +110,8 @@
     <!-- Introduction Section -->
     <div class="intro-section">
         <h2 style="text-align: center; color: red; font-size: 2rem">Contact Us</h2><br>
-        <p style="text-align: center; color: black;padding-left: 1em; font-size: 1.3rem; font-family: Arial, sans-serif;">If you have any questions or need assistance, feel free to reach out to us. We are here to help you with any inquiries you may have. Whether it's regarding courses, exams, or any other matter, our team is always happy to assist you.</p>
-        <p style="text-align: center; color: black; font-size: 1.5rem; font-family: Arial, sans-serif;">We value your feedback and look forward to hearing from you!</p>
+        <p style="text-align: center; color: black; padding-left: 1em; padding-right: 1em; font-size: 1.3rem; font-family: Arial, sans-serif;">If you have any questions or need assistance, feel free to reach out to us. We are here to help you with any inquiries you may have. Whether it's regarding courses, exams, or any other matter, our team is always happy to assist you.</p>
+        <p style="text-align: center; color: black; padding-left: 1em; padding-right: 1em; font-size: 1.5rem; font-family: Arial, sans-serif;">We value your feedback and look forward to hearing from you!</p>
     </div>
 
    <div class="contact-section">
