--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -23,7 +23,105 @@
     padding: 1rem; 
 }
 
+		   		  /* Navbar */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: #ff0000; /* Dark background */
+}
 
+/* Navbar Brand (Logo) */
+.navbar-brand {
+    font-size: 1.3rem;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+/* Navbar Links */
+ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    margin-left: 2rem; /* Spacing between nav items */
+}
+
+a {
+    font-size: 1.2rem;
+    color: #FFFFFF;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+a:hover {
+    color: #FFC0CB; /* Change color on hover */
+}
+
+/* Navbar Toggler (Mobile View) */
+.navbar-toggler {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.navbar-toggler span {
+    width: 2rem;
+    height: 0.3rem;
+    background-color: #FFFFFF;
+    margin: 0.4rem 0;
+}
+
+/* Mobile View (Screen width less than 768px) */
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column; /* Stack navbar items vertically */
+        align-items: flex-start;
+    }
+
+    .navbar-toggler {
+        display: flex;
+    }
+
+    ul {
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        background-color: #ff0000;
+        position: absolute;
+        top: 40px;
+        left: 0;
+        margin: 0;
+        padding: 0;
+    }
+
+    ul.show {
+        display: flex;
+    }
+
+    li {
+        margin-left: 0;
+        padding: 0.1rem;
+        text-align: left;
+    }
+
+    a {
+        font-size: 1.0rem; /* Adjust font size for mobile */
+    }
+}
+
+/* Bottom Heading */
+.bottom-heading {
+    text-align: left;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-top: 3rem;
+    color: #2c3e50;
+}
 
 		.container {
     width: 85%; /* The width of the container */
@@ -177,32 +275,19 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-     
-				  <a class="navbar-brand text-white" href="index.html">HOME</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-				</button>
-				  <a class="navbar-brand text-white" href="ONLINE-TEST.html">ONLINE TEST</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-				</button>
-				
-				  <a class="navbar-brand text-white" href="ABOUT-US.html">ABOUT US</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-				</button>
-				  <a class="navbar-brand text-white" href="CONTACT-US.html">CONTACT US</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-				</button>
-				  <a class="navbar-brand text-white" href="Government-Girls-College-Daulatpur.html">GGCD</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-        </button>
-</nav>
 
- 
+      <a class="navbar-brand" href="Government-Girls-College-Daulatpur.html">GGCD</a>
+	 <div class="navbar-toggler" onclick="toggleNavbar()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+				 <li></li> <a=" href="index.html">HOME</a></li>
+				  <li></li> <a=" href="ONLINE-TEST.html">ONLINE TEST</a></li>
+				  <li></li> <a=" href="href="ABOUT-US.html">ABOUT US</a></li>
+				   <li></li> <a=" href="CONTACT-US.html">CONTACT US</a></li>
+</ul>
+	</nav>
 
 <div class="container">
     <h2 style="color : Blue ;">All the Best!</h2>
