--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -271,7 +271,7 @@ a:hover {
     </style>
 </head>
 <body>
-
+<nav>
       <a class="navbar-brand" href="Government-Girls-College-Daulatpur.html">GGCD</a>
 	 <div class="navbar-toggler" onclick="toggleNavbar()">
             <span></span>
