--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -11,7 +11,7 @@
              body {
             font-size: 1rem; /* 1rem is equal to 16px (default) */
             line-height: 1.4;
-			background: linear-gradient(to top right, #80cbc4, #e1bee7, #80ddea, #d1c4e9);
+			background: linear-gradient(to top right, #E0FFFF);
             text-align: center;
 			 margin: 0;
             padding: 0;
@@ -275,10 +275,11 @@ a:hover {
             <span></span>
             <span></span>
         </div>
-				 <li></li> <a=" href="index.html">HOME</a></li>
-				  <li></li> <a=" href="ONLINE-TEST.html">ONLINE TEST</a></li>
-				  <li></li> <a=" href="href="ABOUT-US.html">ABOUT US</a></li>
-				   <li></li> <a=" href="CONTACT-US.html">CONTACT US</a></li>
+	 <ul id="navbarNav">
+				 <li><a=" href="index.html">HOME</a></li>
+				  <li><a=" href="ONLINE-TEST.html">ONLINE TEST</a></li>
+				  <li><a=" href="href="ABOUT-US.html">ABOUT US</a></li>
+				   <li><a=" href="CONTACT-US.html">CONTACT US</a></li>
 </ul>
 	</nav>
 
