--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -10,7 +10,7 @@
       
              body {
             font-size: 1rem; /* 1rem is equal to 16px (default) */
-            line-height: 1.4;
+            line-height: 1.2;
 			background: linear-gradient(to top right, #E0FFFF);
             text-align: center;
 			 margin: 0;
@@ -65,7 +65,7 @@ a:hover {
 .navbar-toggler span {
     width: 2rem;
     height: 0.3rem;
-    background-color: #FFFFFF;
+    background-color: #FFFAFA;
     margin: 0.4rem 0;
 }
 
