--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -46,7 +46,7 @@
 
         a {
             font-size: 1.2rem;
-            color: #fff;
+            color: #000000;
             text-decoration: none;
             transition: color 0.3s ease;
         }
@@ -65,7 +65,7 @@
         .navbar-toggler span {
             width: 2rem;
             height: 0.3rem;
-            background-color: #FFFAFA;
+            background-color: #000000;
             margin: 0.4rem 0;
         }
 
