--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -63,9 +63,9 @@
         }
 
         .navbar-toggler span {
-            width: 2rem;
+            width: 1rem;
             height: 0.3rem;
-            background-color: #000000;
+            background-color: #FFFFF0;
             margin: 0.4rem 0;
         }
 
