--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -65,7 +65,7 @@
         .navbar-toggler span {
             width: 1rem;
             height: 0.3rem;
-            background-color: #FFFFF0;
+            background-color: #000000;
             margin: 0.4rem 0;
         }
 
@@ -84,10 +84,10 @@
                 display: none;
                 width: 100%;
                 flex-direction: column;
-                background-color: #333;
+                background-color:#FFFFE0;
                 position: absolute;
                 top: 100%;
-                left: 0;
+                right: 0;
                 margin: 0;
                 padding: 0;
                 z-index: 1;
@@ -268,10 +268,10 @@
             <span></span>
         </div>
 	 <ul id="navbarNav">
-				 <li><a=" href="index.html">HOME</a></li>
-				  <li><a=" href="ONLINE-TEST.html">ONLINE TEST</a></li>
-				  <li><a=" href="href="ABOUT-US.html">ABOUT US</a></li>
-				   <li><a=" href="CONTACT-US.html">CONTACT US</a></li>
+ <li><a=" href="index.html">HOME</a></li>
+ <li><a=" href="ONLINE-TEST.html">ONLINE TEST</a></li>
+<li><a=" href="href="ABOUT-US.html">ABOUT US</a></li>
+ <li><a=" href="CONTACT-US.html">CONTACT US</a></li>
 </ul>
 	</nav>
 
