--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -13,7 +13,7 @@
             line-height: 1.2;
 			background: linear-gradient(to top right, #E0FFFF);
             text-align: center;
-			 margin: 0;
+	    margin: 0;
             padding: 0;
         }
      nav {
@@ -72,7 +72,7 @@
         /* Mobile View (Screen width less than 768px) */
         @media (max-width: 768px) {
             nav {
-                flex-direction: column;
+                flex-direction: row;
                 align-items: flex-start;
             }
 
