--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -268,10 +268,11 @@
             <span></span>
         </div>
 	 <ul id="navbarNav">
- <li><a=" href="index.html">HOME</a></li>
- <li><a=" href="ONLINE-TEST.html">ONLINE TEST</a></li>
-<li><a=" href="href="ABOUT-US.html">ABOUT US</a></li>
- <li><a=" href="CONTACT-US.html">CONTACT US</a></li>
+		 
+ <li><a href="index.html" aria-label="Go to Home Page">HOME</a></li>
+ <li><a href="ONLINE-TEST.html" aria-label="Go to Page">ONLINE TEST</a></li>
+<li><a href="ABOUT-US.html" aria-label="Go to Page">ABOUT US</a></li>
+ <li><a href="CONTACT-US.html" aria-label="Go to Page" aria-label="Go to Home Page">CONTACT US</a></li>
 </ul>
 	</nav>
 
