--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 2rem;
+            padding-right: 2rem;
             background-color: #FFF8DC;
             position: relative;
         }
