--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -21,13 +21,14 @@
             justify-content: space-between;
             align-items: center;
             padding-right: 2rem;
+	     padding-left: 2rem;
             background-color: #FFF8DC;
             position: relative;
         }
 
         /* Navbar Brand (Logo) */
         .navbar-brand {
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             color: #000;
             text-decoration: none;
         }
@@ -105,7 +106,7 @@
 
             a {
                 font-size: 1.1rem;
-                color: #fff;
+                color: #000000;
             }
         }
 		.container {
