--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -74,6 +74,7 @@
         @media (max-width: 768px) {
             nav {
                 flex-direction: row;
+		align-items: center;
                 align-items: flex-start;
             }
 
