--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -12,14 +12,14 @@
 	        /* Global Styles */
         body {
             font-size: 1rem; /* 1rem for scalable font size */
-            line-height: 1.5;
+            line-height: 1.2;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
+            background: linear-gradient(to bottom right, #E0FFFF);
         }
         /* Custom Navbar Color and Padding */
         .navbar-custom {
-            background-color: #007bff; /* Blue background */
+            background-color: #FFF8DC; /* Blue background */
         }
 
      
@@ -77,7 +77,7 @@
 <body>
 
     <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-4">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="Government-Girls-College-Daulatpur.html">Government Girls College Daulatpur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
