--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -19,7 +19,7 @@
         }
         /* Custom Navbar Color and Padding */
         .navbar-custom {
-            background-color: #FFF8DC; /* Blue background */
+            background-color: #FFF8DC;
         }
 
      
@@ -51,22 +51,6 @@
             color: white;
         }
 
-        .bottom-heading {
-            text-align: center;
-            font-size: 2rem; /* Font size in rem */
-            font-weight: bold;
-            margin-top: 5%; /* Use percentage for spacing */
-            color: #2c3e50;
-        }
-
-        /* Navbar Customizations */
-        .navbar-brand {
-            font-size: 1.25rem; /* relative unit for navbar brand size */
-        }
-
-        .navbar-nav .nav-link {
-            font-size: 1rem; /* Relative font size for nav links */
-        }
 		
         /* Footer */
         footer {
@@ -86,17 +70,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white active" aria-current="page" href="index.html">HOME</a>
+                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="ONLINE-TEST.html">ONLINE TEST</a>
+                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="ABOUT-US.html">ABOUT US</a>
+                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="CONTACT-US.html">CONTACT US</a>
+                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
