--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -51,6 +51,13 @@
             color: white;
         }
 
+        .bottom-heading {
+            text-align: center;
+            font-size: 2rem; /* Font size in rem */
+            font-weight: bold;
+            margin-top: 5%; /* Use percentage for spacing */
+            color: #2c3e50;
+        }
 		
         /* Footer */
         footer {
@@ -63,7 +70,7 @@
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="Government-Girls-College-Daulatpur.html">Government Girls College Daulatpur</a>
+            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Government Girls College Daulatpur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
