--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -11,7 +11,7 @@
              body {
             font-size: 1rem; /* 1rem is equal to 16px (default) */
             line-height: 1.2;
-			background: linear-gradient(to top right, #E0FFFF);
+			background: #E0FFFF;
             text-align: center;
 	    margin: 0;
             padding: 0;
