--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -10,8 +10,8 @@
       
              body {
             font-size: 1rem; /* 1rem is equal to 16px (default) */
-            line-height: 1.2;
-			background: #E0FFFF;
+            line-height: 1.4;
+	   background: #E0FFFF;
             text-align: center;
 	    margin: 0;
             padding: 0;
@@ -74,7 +74,7 @@
         @media (max-width: 768px) {
             nav {
                 flex-direction: row;
-		align-items: center;
+		text-align: center;
                 align-items: flex-start;
             }
 
