--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -12,15 +12,15 @@
         /* Global Styles */
         body {
             font-size: 1rem;  /* 1rem is equal to the root font size (16px) */
-            line-height: 1.5;
+            line-height: 1.2;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
+            background: #E0FFFF;
         }
 
         /* Custom Navbar Color and Padding */
         .navbar-custom {
-            background-color: blue; /* Blue background */
+            background-color: #FFF8DC;
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
@@ -34,26 +34,26 @@
 </head>
 <body>
     <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-4">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="Government-Girls-College-Daulatpur.html">Government Girls College Daulatpur</a>
+            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Government Girls College Daulatpur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white active" aria-current="page" href="index.html">HOME</a>
+                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="ONLINE-TEST.html">ONLINE TEST</a>
+                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
                   
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="ABOUT-US.html">ABOUT US</a>
+                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="CONTACT-US.html">CONTACT US</a>
+                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
