--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             line-height: 1.5;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
+            background:  #E0FFFF;
         }
  /* Custom Navbar Color and Padding */
         .navbar-custom {
-            background-color: blue; /* Blue background */
+         background-color: #FFF8DC;
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
