--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         <div class="col-12 col-md-4 mb-3">
             <div class="btn-group w-100">
                 <!-- Red Button (btn-danger) for UNIVERSITIES -->
-                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <div type="nav" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="visually">UNIVERSITIES</span>
-                </button>
+                </div>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
                         <li><a class="dropdown-item" href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
