--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
         <div class="col-12 col-md-4 mb-3">
             <div class="btn-group w-100">
                 <!-- Red Button (btn-danger) for UNIVERSITIES -->
-                <div type="nav" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="visually">UNIVERSITIES</span>
-                </div>
+                </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
                         <li><a class="dropdown-item" href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
                 </ul>
             </div>
         </div>
-        <div class="col-12 col-md-4 mb-3">
+        
             <div class="btn-group w-100">
                 <!-- Red Button (btn-danger) for ABOUT -->
                 <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
@@ -169,10 +169,10 @@
                     <li><a class="dropdown-item" href="Government-Girls-College-Daulatpur.html" target="_self">GGC,Daulatpur</a></li>
                         <li><a class="dropdown-item" href="COLLEGE.html" target="_self">College</a></li>
                 </ul>
-            </div>
+           
         </div>
 
-        <p style="text-align: center; color: white; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
+        <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
     </div>
 </div>
 
