--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </ul>
             </div>
         </div>
-        
+        <div class="col-6 col-md-1 mb-3">
             <div class="btn-group w-100">
                 <!-- Red Button (btn-danger) for ABOUT -->
                 <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
@@ -169,7 +169,7 @@
                     <li><a class="dropdown-item" href="Government-Girls-College-Daulatpur.html" target="_self">GGC,Daulatpur</a></li>
                         <li><a class="dropdown-item" href="COLLEGE.html" target="_self">College</a></li>
                 </ul>
-           
+	    </div>
         </div>
 
         <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
