--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
             </div>
         </div>
     </nav>
-<div class="container mt-2">
+<div class="container mt-1">
     <!-- Buttons with Dropdowns in a Row -->
-    <div class="row">
-        <div class="col-12 col-md-4 mb-3">
+    <div class="col">
+        <div class="col-6 col-md-1 mb-3">
             <div class="btn-group w-100">
                 <!-- Red Button (btn-danger) for UNIVERSITIES -->
                 <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
