--- a/index.html
+++ b/index.html
@@ -171,21 +171,15 @@
                 </ul>
 	    </div>
         </div>
-
+<li><a class="dropdown-item" href="COLLEGE.html" target="_self">College</a></li>
         <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
     </div>
 </div>
-
-
-
  <div class="hero">
         <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
 	 <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
 	 <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
-    
            </div>
-	
-  
       </div>
     </div>
 	<p style="text-align: center; color: black; font-size: 1.3rem; font-family: Arial, sans-serif; padding-left: 1em; padding-right: 2em;">Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!.</p>
@@ -207,7 +201,7 @@
         </div>
     </div>
   
-    <footer class="bg-blue-600 text-white text-center py-4">
+    <footer class="bg-LightCyan-600 text-white text-center py-4">
         <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
 
