--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     </style>
   </head>
   <body>
+	  <h1>GOVERNMEN GIRLS COLLEGE DAULATPUR</h1>
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
@@ -171,7 +172,6 @@
                 </ul>
 	    </div>
         </div>
-<li><a class="dropdown-item" href="COLLEGE.html" target="_self">College</a></li>
         <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
     </div>
 </div>
