--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </style>
   </head>
   <body>
-	  <h1>GOVERNMEN GIRLS COLLEGE DAULATPUR</h1>
+	  <h5>GOVERNMENT GIRLS COLLEGE DAULATPUR</h5>
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
