--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </style>
   </head>
   <body>
-	  <h5>GOVERNMENT GIRLS COLLEGE DAULATPUR</h5>
+	  <h5 style="text-align: center; color: red; padding-left: 0.4em; ">GOVERNMENT GIRLS COLLEGE<br> DAULATPUR</h5>
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
