--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </style>
   </head>
   <body>
-	  <h5 style=" color: red; padding-left: 0.8 em; ">GOVERNMENT GIRLS COLLEGE<br> DAULATPUR</h5>
+	  <h5 style=" color: red; padding-left: 0.8em; ">GOVERNMENT GIRLS COLLEGE<br> DAULATPUR</h5>
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
@@ -173,33 +173,35 @@
             </div>
         </div>
     </nav>
-<div class="container mt-1">
-    <!-- Buttons with Dropdowns in a Row -->
-    <div class="col">
-        <div class="col-6 col-md-1 mb-3">
-            <div class="btn-group w-100">
-                <!-- Red Button (btn-danger) for UNIVERSITIES -->
-                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="visually">UNIVERSITIES</span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
+ <div class="container mt-1">
+        <div class="row">
+            <!-- Column 1 - Universities Dropdown -->
+            <div class="col-6 col-md-3 mb-3">
+                <!-- Dropdown Menu for UNIVERSITIES -->
+                <div class="dropdown">
+                    <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        UNIVERSITIES
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
                         <li><a class="dropdown-item" href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
-                </ul>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="col-6 col-md-1 mb-3">
-            <div class="btn-group w-100">
-                <!-- Red Button (btn-danger) for ABOUT -->
-                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="visually">ABOUT</span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="Government-Girls-College-Daulatpur.html" target="_self">GGC,Daulatpur</a></li>
+
+            <!-- Column 2 - About Dropdown -->
+            <div class="col-6 col-md-3 mb-3">
+                <!-- Dropdown Menu for ABOUT -->
+                <div class="dropdown">
+                    <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        ABOUT
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="Government-Girls-College-Daulatpur.html" target="_self">GGC, Daulatpur</a></li>
                         <li><a class="dropdown-item" href="COLLEGE.html" target="_self">College</a></li>
-                </ul>
-	    </div>
-        </div>
+                    </ul>
+                </div>
+            </div>
         <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
     </div>
 </div>
