--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             background-color: LightCyan; /* LightCyan color */
             border: none; /* Optional: Removes border */
             color: #000; /* Text color */
-            padding: 10px 20px; /* Optional: Adjust padding */
+            /* Optional: Adjust padding */
             text-decoration: none; /* Remove underline from button */
         }
 
