--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
             background-color: LightCyan; /* LightCyan color */
             border: none; /* Optional: Removes border */
             color: #000; /* Text color */
+	    
             /* Optional: Adjust padding */
             text-decoration: none; /* Remove underline from button */
+	 
         }
 
         /* Optional: Change text color on hover */
@@ -130,7 +132,14 @@
         .dropdown-menu .dropdown-item:hover {
             background-color: #f1f1f1; /* Light grey on hover */
             color: #000; /* Change text color on hover */
-        }	
+        }
+	    .right-sidebar {
+    display: flex;
+    flex-direction: row; /* Align buttons in a row */
+    justify-content: flex-start; /* Align the buttons to the left */
+    padding: 1rem;
+    background-color: #f8f9fa; /* Light background */
+}
         /* Footer */
         footer {
             background-color: #1d4ed8;
